other-vpol/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/deploy-good-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  template:
    spec:
      restartPolicy: Always
