other-vpol/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restrict-sa-ns
