other-vpol/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/sa-01.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: serviceaccount01
  namespace: restrict-sa-ns
