other-vpol/restrict-pod-controller-serviceaccount-updates/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: restrict-pod-controller-serviceaccount-updates
spec:
  steps:
  - name: shared-exception-namespace
    skipDelete: true
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
  - name: step-01
    try:
    - apply:
        file: ../restrict-pod-controller-serviceaccount-updates.yaml
    - apply:
        file: policy-exception.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: restrict-pod-controller-serviceaccount-updates
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: sa-01.yaml
    - apply:
        file: sa-02.yaml
    - apply:
        file: deployment.yaml
    - apply:
        file: cronjob.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: cronjob-bad-update.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deploy-bad-update.yaml
    - apply:
        file: cronjob-good-update.yaml
    - apply:
        file: deploy-good-update.yaml
